--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -89,7 +89,7 @@ img {
   border: 0;
 }
 svg:not(:root) {
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 figure {
   margin: 1em 40px;
@@ -975,7 +975,7 @@ hr {
   height: 1px;
   padding: 0;
   margin: -1px;
-  overflow: hidden;
+  /*overflow: hidden;*/
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
@@ -1262,7 +1262,7 @@ dd {
   .dl-horizontal dt {
     float: left;
     width: 160px;
-    overflow: hidden;
+    /*overflow: hidden;*/
     clear: left;
     text-align: right;
     text-overflow: ellipsis;
@@ -3165,7 +3165,7 @@ tbody.collapse.in {
 .collapsing {
   position: relative;
   height: 0;
-  overflow: hidden;
+  /*overflow: hidden;*/
   -webkit-transition-timing-function: ease;
        -o-transition-timing-function: ease;
           transition-timing-function: ease;
@@ -3221,7 +3221,7 @@ tbody.collapse.in {
 .dropdown-menu .divider {
   height: 1px;
   margin: 9px 0;
-  overflow: hidden;
+  /*overflow: hidden;*/
   background-color: #e5e5e5;
 }
 .dropdown-menu > li > a {
@@ -3676,7 +3676,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .nav-divider {
   height: 1px;
   margin: 9px 0;
-  overflow: hidden;
+  /*overflow: hidden;*/
   background-color: #e5e5e5;
 }
 .nav > li > a > img {
@@ -4797,7 +4797,7 @@ a.thumbnail.active {
 .progress {
   height: 20px;
   margin-bottom: 20px;
-  overflow: hidden;
+  /*overflow: hidden;*/
   background-color: #f5f5f5;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, .1);
@@ -5408,7 +5408,7 @@ a.list-group-item-danger.active:focus {
   display: block;
   height: 0;
   padding: 0;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .embed-responsive .embed-responsive-item,
 .embed-responsive iframe,
@@ -5477,7 +5477,7 @@ button.close {
   border: 0;
 }
 .modal-open {
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .modal {
   position: fixed;
@@ -5487,7 +5487,7 @@ button.close {
   left: 0;
   z-index: 1040;
   display: none;
-  overflow: hidden;
+  /*overflow: hidden;*/
   -webkit-overflow-scrolling: touch;
   outline: 0;
 }
@@ -5830,7 +5830,7 @@ button.close {
 .carousel-inner {
   position: relative;
   width: 100%;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .carousel-inner > .item {
   position: relative;
