--- a/css/slit-slider.css
+++ b/css/slit-slider.css
@@ -3,7 +3,7 @@
 	height: 400px;
 	margin: 0 auto;
 	position: relative;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 .sl-slider {
@@ -22,7 +22,7 @@
 	height: 100%;
 	top: 0;
 	left: 0;
-} 
+}
 
 .sl-slide {
 	z-index: 1;
@@ -31,7 +31,7 @@
 /* The duplicate parts/slices */
 
 .sl-content-slice {
-	overflow: hidden;
+	/*overflow: hidden;*/
 	position: absolute;
 	-webkit-box-sizing: content-box;
 	-moz-box-sizing: content-box;
@@ -118,7 +118,7 @@
 
 #home .sl-slider-wrapper {
 	width: 100%;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	position: relative;
 }
 
@@ -151,7 +151,7 @@
 	text-indent: -90000px;
 	margin-top: -40px;
 	cursor: pointer;
-	
+
 	-webkit-transform: rotate(45deg);
 	-moz-transform: rotate(45deg);
 	-o-transform: rotate(45deg);
@@ -198,8 +198,8 @@
 	background: #ddd;
 	background: rgba(150,150,150,0.4);
 	cursor: pointer;
-	box-shadow: 
-		0 1px 1px rgba(255,255,255,0.4), 
+	box-shadow:
+		0 1px 1px rgba(255,255,255,0.4),
 		inset 0 1px 1px rgba(0,0,0,0.1);
 }
 
@@ -211,16 +211,16 @@
 	-ms-transition: all 0.2s;
 	-o-transition: all 0.2s;
 	transition: all 0.2s;
-	box-shadow: 
-		0 1px 1px rgba(255,255,255,0.4), 
+	box-shadow:
+		0 1px 1px rgba(255,255,255,0.4),
 		inset 0 1px 1px rgba(0,0,0,0.1),
 		0 0 0 2px rgba(255,255,255,0.5);
 }
 
 #home .nav-dots span.nav-dot-current,
 #home .nav-dots span:hover {
-	box-shadow: 
-		0 1px 1px rgba(255,255,255,0.4), 
+	box-shadow:
+		0 1px 1px rgba(255,255,255,0.4),
 		inset 0 1px 1px rgba(0,0,0,0.1),
 		0 0 0 5px rgba(255,255,255,0.5);
 }
